Fix bug on tablets. Add different keyframes for tablets and desktop resolution because test doesn't fit in menu.

--- a/source/stylesheets/modules/_m-main-menu.scss
+++ b/source/stylesheets/modules/_m-main-menu.scss
@@ -7,17 +7,17 @@
   }
 
   50% {
-    @include transform(translate3d(-30vw, 0, 0));
+    @include transform(translate3d(-44vw, 0, 0));
     opacity: 1;
   }
 
   75% {
-    @include transform(translate3d(-27vw, 0, 0));
+    @include transform(translate3d(-41vw, 0, 0));
     opacity: 1;
   }
 
   100% {
-    @include transform(translate3d(-30vw, 0, 0));
+    @include transform(translate3d(-44vw, 0, 0));
   }
 }
 
@@ -104,7 +104,7 @@
 
 @media #{$breakpoint-tablet} {
   .main-menu {
-    @include position(0, -33vw, 0, 100vw);
+    @include position(0, -47vw, 0, 100vw);
 
     &.bouncedIn {
       @include animation(mainMenuBounceIn .5s both);
@@ -117,5 +117,32 @@
     &.bouncedOut {
       @include animation(mainMenuBounceOut .5s both);
     }
+  }
+}
+
+@media #{$breakpoint-desktop} {
+  @include keyframes(mainMenuBounceIn) {
+    0% {
+      @include transform(translate3d(0, 0, 0));
+      opacity: 0;
+    }
+
+    50% {
+      @include transform(translate3d(-30vw, 0, 0));
+      opacity: 1;
+    }
+
+    75% {
+      @include transform(translate3d(-27vw, 0, 0));
+      opacity: 1;
+    }
+
+    100% {
+      @include transform(translate3d(-30vw, 0, 0));
+    }
+  }
+
+  .main-menu {
+    @include position(0, -33vw, 0, 100vw);
   }
 }
